# IArg

./: README.md  memory.json  pyproject.toml
src/iarg/: commands.py  constants.py  main.py  model.py  parser.py  planner.py  prompts.py  utils.py
src/iarg/agent/: __init__.py  agent.py  planner.py  responder.py
src/iarg/memory/: memory.py
src/iarg/tools/: base.py  diff.py  edit_file.py  files.py  find_files.py  glob.py  grep.py  proyect.py  read_file.py  read_files.py  registry.py  tree.py
src/iarg/ui/: __init__.py  app.py
