[project]
name = "iarg"
version = "0.1.0"
description = "Personal AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.50",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iarg"]

[project.scripts]
iarg = "iarg.main:app"